--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -266,6 +266,7 @@
 
 <!ENTITY Ctr_aerocolors		"Blaue 'Aero' Farben für Leisten (und Tabs)">
 <!ENTITY Ctr_transpttbw10	"Titel/Menü/Tabs Leiste: Hintergrundfarbe entfernen">
+<!ENTITY Ctr_transpttbew10	"Weitere Anpassungen für einige OS Themas">
 <!ENTITY Ctr_transptcw10	"Verstecke Standardschaltflächen 'Minimieren / Maximieren / Schließen'">
 <!ENTITY Ctr_hidenavbar		"Leiste verstecken">
 <!ENTITY Ctr_navbarpad		"Zusätzliche Abstände links und rechts">
