--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -266,6 +266,7 @@
 
 <!ENTITY Ctr_aerocolors		"Μπλε χρώματα «Aero» για εργαλειοθήκες (και καρτέλες)">
 <!ENTITY Ctr_transpttbw10	"Τίτλος/μενού/εργαλειοθήκη καρτελών: απομάκρυνση χρώματος φόντου">
+<!ENTITY Ctr_transpttbew10	"Additional tweaks for some OS themes">
 <!ENTITY Ctr_transptcw10	"Απόκρυψη προεπιλεγμένων κουμπιών ΛΣ ελαχιστοποίηση/μεγιστοποίηση/κλείσιμο">
 <!ENTITY Ctr_hidenavbar		"Απόκρυψη εργαλειοθήκης">
 <!ENTITY Ctr_navbarpad		"Επιπρόσθετη πλήρωση αριστερά και δεξιά">
