--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -266,6 +266,7 @@
 
 <!ENTITY Ctr_aerocolors		"Colores azul aero (celeste) para las barras de herramientas principales y pestañas">
 <!ENTITY Ctr_transpttbw10	"Barra de título/menú/pestañas: Eliminar color de fondo">
+<!ENTITY Ctr_transpttbew10	"Additional tweaks for some OS themes">
 <!ENTITY Ctr_transptcw10	"Ocultar botones Min/Max/Cerrar predeterminados del SO">
 <!ENTITY Ctr_hidenavbar		"Ocultar barra">
 <!ENTITY Ctr_navbarpad		"Ahuecado adicional a izquierda y derecha">
