--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -59,7 +59,7 @@
 <!ENTITY Ctr_tabinsertion	"Wstaw powiązaną kartę za kartą bieżącą (about:config)">
 <!ENTITY Ctr_emptyfavicon	"Przywróć pustą ikonę ulubionych (jeżeli strona nie zaoferuje żadnej)">
 <!ENTITY Ctr_noemptypticon	"Usuń pustą ikonę ulubionych z przypiętej karty">
-<!ENTITY Ctr_e10stab_notd	"Karty E10s: Usuń podkreślenie">
+<!ENTITY Ctr_e10stab_notd	"Karty E10s: usuń podkreślenie">
 <!ENTITY Ctr_closetab_0		"Przycisk zamknięcia karty">
 <!ENTITY Ctr_closetab_1		"Tylko na aktywnej karcie">
 <!ENTITY Ctr_closetab_2		"Nigdzie">
@@ -113,19 +113,19 @@
 <!ENTITY Ctr_nbcompact		"Zmniejsz wysokość paska nawigacji">
 <!ENTITY Ctr_hide_bf_popup	"Ukryj menu historii po naciśnięciu przycisku myszki">
 <!ENTITY Ctr_bf_space		"Zmniejsz odstęp pomiędzy przyciskami (jeżeli możliwe)">
-<!ENTITY Ctr_noconicons		"Menu kontekstowe strony: Zastąp ikony etykietami (Wstecz, Do przodu...)">
+<!ENTITY Ctr_noconicons		"Menu kontekstowe strony: zastąp ikony etykietami (Wstecz, Do przodu...)">
 <!ENTITY Ctr_prefpage		"Strona opcji">
 <!ENTITY Ctr_altoptionsd	"Domyślny wygląd">
 <!ENTITY Ctr_altoptionsp	"Alternatywny wygląd">
-<!ENTITY Ctr_altoptionsw	"Otwieraj w oknie stronę ustawień">
+<!ENTITY Ctr_altoptionsw	"Otwieraj stronę ustawień w oknie">
 <!ENTITY Ctr_altoptionsww	"Szerokość">
 <!ENTITY Ctr_altoptionswh	"Wysokość">
 <!ENTITY Ctr_altoptionsi	"Symulowane okno opcji nie jest już oknem dialogowym, ale 'oknem przeglądarki' z ukrytymi wszystkimi paskami narzędzi. Funkcja 'Użyj bieżących stron' dodaje tylko adresy stron otwartych w bieżącym oknie, w tym przypadku tylko 'about:preferences'. Przycisk 'opcji' paska narzędzi zostaje zastąpiony nowym, aby mógł otwierać opcje w oknie.">
 <!ENTITY Ctr_options_rem	"Pamiętaj ostatnio wybraną kategorię">
 <!ENTITY Ctr_svgfilters		"Kolory SVG ikon przycisków domyślnego paska narzędzi">
 <!ENTITY Ctr_wincontrols	"Ruchome kontrolki okna pełnego ekranu">
-<!ENTITY Ctr_oldtoplevimg	"Obrazy 'domeny najwyższego poziomu': Klasyczny wygląd">
-<!ENTITY Ctr_altalertbox	"'Pole ostrzeżenia': Alternatywny wygląd">
+<!ENTITY Ctr_oldtoplevimg	"Obrazy 'domeny najwyższego poziomu': klasyczny wygląd">
+<!ENTITY Ctr_altalertbox	"'Pole ostrzeżenia': alternatywny wygląd">
 <!ENTITY Ctr_emptyfavicon2	"Wymień standardową ikonę ulubionych (pusta i wykropkowana) na ikonę kartki">
 <!ENTITY Ctr_mstatusbar		"Ruchomy panel paska statusu">
 <!ENTITY Ctr_mstatusbars4e	"Panel paska statusu jest kontrolowany przez 'Status-4-Evar'">
@@ -133,9 +133,9 @@
 <!ENTITY Ctr_mstatusbarpzt	"Panel paska statusu jest kontrolowany przez 'Puzzle Toolbars'">
 <!ENTITY Ctr_mstatusbarabr	"Panel paska statusu jest kontrolowany przez 'The Addon Bar (Restored)'">
 <!ENTITY Ctr_combrelstop	"Połącz przyciski zatrzymania i odświeżania">
-<!ENTITY Ctr_stoprel1		"Ważne: Umieść przycisk odświeżania za przyciskiem zatrzymania!">
-<!ENTITY Ctr_panelmenucol	"Menu panelu: Alternatywny kolor tła">
-<!ENTITY Ctr_hideprivmask	"Prywatne przeglądanie: Ukryj wskaźnik-maskę">
+<!ENTITY Ctr_stoprel1		"Ważne: umieść przycisk odświeżania za przyciskiem zatrzymania!">
+<!ENTITY Ctr_panelmenucol	"Menu panelu: alternatywny kolor tła">
+<!ENTITY Ctr_hideprivmask	"Prywatne przeglądanie: ukryj wskaźnik-maskę">
 <!ENTITY Ctr_navsmallicons	"Małe ikony">
 <!ENTITY Ctr_navlargeicons	"Duże ikony">
 <!ENTITY Ctr_nbisizedelay0	"Opóźnienie inicjacji po uruchomieniu przeglądarki">
@@ -151,26 +151,26 @@
 <!ENTITY Ctr_nav_txt_ico3	"Pokaż tylko tekst">
 <!ENTITY Ctr_nav_txt_exp	"Atrybuty eksperymentalne:">
 <!ENTITY Ctr_iat_notf_vt	"Wyklucz pionowe paski narzędzi">
-<!ENTITY Ctr_cpanelmenus	"Pop-upy menu panelu (zakładki, historia itp.): Widok kompaktowy">
-<!ENTITY Ctr_hidezoomres	"Kontrolki powiększenia na pasku narzędzi: Ukryj przycisk resetu powiększenia">
-<!ENTITY Ctr_alt_newtabp	"Strona nowej karty (about:newtab): Alternatywny wygląd">
+<!ENTITY Ctr_cpanelmenus	"Pop-upy menu panelu (zakładki, historia itp.): widok kompaktowy">
+<!ENTITY Ctr_hidezoomres	"Kontrolki powiększenia na pasku narzędzi: ukryj przycisk resetu powiększenia">
+<!ENTITY Ctr_alt_newtabp	"Strona nowej karty (about:newtab): alternatywny wygląd">
 <!ENTITY Ctr_ctroldsearch	"Stara wyszukiwarka (eksperymentalne)">
 <!ENTITY Ctr_addonmanager	"Menedżer dodatków">
-<!ENTITY Ctr_alt_addonsp	"Strona 'więcej informacji': Alternatywny porządek">
+<!ENTITY Ctr_alt_addonsp	"Strona 'więcej informacji': alternatywny porządek">
 <!ENTITY Ctr_alt_addonsm	"Alternatywny wygląd">
-<!ENTITY Ctr_am_nowarning	"Listy dodatków: Ukryj ostrzeżenia">
-<!ENTITY Ctr_am_compact		"Listy dodatków: Widok kompaktowy">
+<!ENTITY Ctr_am_nowarning	"Listy dodatków: ukryj ostrzeżenia">
+<!ENTITY Ctr_am_compact		"Listy dodatków: widok kompaktowy">
 <!ENTITY Ctr_am_compact2	"Widok kompaktowy +">
-<!ENTITY Ctr_addonversion	"Listy dodatków: Wyświetl wersję dodatku">
+<!ENTITY Ctr_addonversion	"Listy dodatków: wyświetl wersję dodatku">
 <!ENTITY Ctr_xpinstallui	"Stare okno instalacji dodatku (ustawienie about:config)">
-<!ENTITY Ctr_bmbutpanelm	"Przycisk menu zakładek: Wygląd pop-upu menu panelu">
-<!ENTITY Ctr_bmbutnotext	"Przycisk menu zakładek: Ukryj etykietę na pasku zakładek">
-<!ENTITY Ctr_skipprintpr	"Przycisk drukowania: Pomiń podgląd wydruku">
-<!ENTITY Ctr_tbconmenu		"Menu kontekstowe paska narzędzi: Ukryj 'Przenieś do menu', 'Usuń z paska narzędzi', 'Odśwież wszystkie karty', 'Dodaj zakładki do wszystkich kart...' oraz 'Przywróć zamkniętą kartę'">
+<!ENTITY Ctr_bmbutpanelm	"Przycisk menu zakładek: wygląd pop-upu menu panelu">
+<!ENTITY Ctr_bmbutnotext	"Przycisk menu zakładek: ukryj etykietę na pasku zakładek">
+<!ENTITY Ctr_skipprintpr	"Przycisk drukowania: pomiń podgląd wydruku">
+<!ENTITY Ctr_tbconmenu		"Menu kontekstowe paska narzędzi: ukryj 'Przenieś do menu', 'Usuń z paska narzędzi', 'Odśwież wszystkie karty', 'Dodaj zakładki do wszystkich kart...' oraz 'Przywróć zamkniętą kartę'">
 <!ENTITY Ctr_noresizerxp	"Usuń zmieniacz rozmiaru (Windows XP)">
 <!ENTITY Ctr_extraurlkeycb	"Otwórz dodatkowy pasek adresu (Cmd/Ctrl+">
-<!ENTITY Ctr_pmhidelabels	"Wyskakujące okno menu panelu: Ukryj etykiety przycisku">
-<!ENTITY Ctr_menupopupscr	"Menu kontekstowe: Pokaż pasek przewijania zamiast strzałek przewijania">
+<!ENTITY Ctr_pmhidelabels	"Wyskakujące okno menu panelu: ukryj etykiety przycisku">
+<!ENTITY Ctr_menupopupscr	"Menu kontekstowe: pokaż pasek przewijania zamiast strzałek przewijania">
 <!ENTITY Ctr_closegeneral	"Ogólne ikony zamykania">
 
 <!ENTITY Ctr_tabsep_def		"Domyślne separatory kart">
@@ -217,18 +217,18 @@
 <!ENTITY Ctr_urlbardropm	"Przenieś znacznik rozwinięcia na koniec paska adresu">
 <!ENTITY Ctr_altreaderico	"Alternatywne ikony 'Popraw czytelność'">
 <!ENTITY Ctr_hideprbutton	"Ukryj przycisk informujący o zablokowanym wyskakującym oknie">
-<!ENTITY Ctr_locsearchbw10	"Reduce location bars and search bars height (experimental)">
+<!ENTITY Ctr_locsearchbw10	"Zredukuj wysokość paska adresu i wyszukiwania (eksperymentalne)">
 <!ENTITY Ctr_urlbar_ib		"Przycisk tożsamości witryny (pole tożsamości)">
 <!ENTITY Ctr_ib_nohovcolor	"Nie pokazuj szarego koloru po najechaniu">
-<!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
+<!ENTITY Ctr_ib_graycolor	"Szary kolor dla nieznanej tożsamości oraz stron 'chrome'">
 <!ENTITY Ctr_verifiedcolors	"Kolory przycisków zweryfikowanych stron, połączeń bezpiecznych oraz niebezpiecznych">
-<!ENTITY Ctr_faviconurl		"Ikona ulubionych: Ikona bieżącej strony">
+<!ENTITY Ctr_faviconurl		"Ikona ulubionych: ikona bieżącej strony">
 <!ENTITY Ctr_padlock		"Ikona kłódki dla bezpiecznych połączeń">
 <!ENTITY Ctr_padlock_hid	"Ukryta">
 <!ENTITY Ctr_padlock_def	"Domyślna">
 <!ENTITY Ctr_padlock_cla	"Klasyczna">
 <!ENTITY Ctr_padlock_mod	"Nowoczesna">
-<!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
+<!ENTITY Ctr_padlock_ext	"Ikona '&brandShortName;' dla ważnych stron 'about'">
 <!ENTITY Ctr_icopageinfo	"Kliknięcie ikony otwiera okno 'informacji o stronie'">
 
 <!ENTITY Ctr_menubar_items	"Pozycje elementów menu">
@@ -265,9 +265,10 @@
 <!ENTITY Ctr_menubarnofog	"Usuń kolor tła i mgłę (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Niebieskie kolory Aero pasków narzędzi (i kart)">
-<!ENTITY Ctr_transpttbw10	"Pasek tytułu/menu/kart: Usuń kolor tła">
+<!ENTITY Ctr_transpttbw10	"Pasek tytułu/menu/kart: usuń kolor tła">
+<!ENTITY Ctr_transpttbew10	"Additional tweaks for some OS themes">
 <!ENTITY Ctr_transptcw10	"Ukryj domyślne przyciski systemowe: Minimalizuj, Maksymalizuj, Zamknij">
-<!ENTITY Ctr_hidenavbar		"Pasek nawigacji: Ukryj pasek narzędzi">
+<!ENTITY Ctr_hidenavbar		"Pasek nawigacji: ukryj pasek narzędzi">
 <!ENTITY Ctr_navbarpad		"Dodatkowa przestrzeń po lewej i prawej">
 <!ENTITY Ctr_navbarpad_l	"Lewe:">
 <!ENTITY Ctr_navbarpad_r	"Prawe:">
@@ -277,13 +278,13 @@
 <!ENTITY Ctr_nonavbarbg1	"Dotyczy dodatkowych pasków narzędzi tego dodatku oraz innych górnych pasków narzędzi.">
 <!ENTITY Ctr_nonavbarbg2	"Dotyczy wszystkich pasków narzędzi Slim Chrome z dodatku 'Beyond Australis'.">
 <!ENTITY Ctr_nonavborder	"Dodaj obramowanie na górze paska">
-<!ENTITY Ctr_nonavtbborder	"Górne paski: Usuń obramowanie paska">
-<!ENTITY Ctr_hidesbclose	"Paski boczne: Ukryj przycisk zamknięcia paska bocznego">
-<!ENTITY Ctr_notextshadow	"Paski narzędzi: Ukryj cień tekstu na pasku narzędzi i na karcie">
-<!ENTITY Ctr_chevronfix		"Pasek nawigacji: Ukryj podwójną strzałkę ('szewron') na końcu paska">
-<!ENTITY Ctr_tbsep_winc		"Górne paski: Dodatkowe separatory paska narzędzi">
+<!ENTITY Ctr_nonavtbborder	"Górne paski: usuń obramowanie paska">
+<!ENTITY Ctr_hidesbclose	"Paski boczne: ukryj przycisk zamknięcia paska bocznego">
+<!ENTITY Ctr_notextshadow	"Paski narzędzi: ukryj cień tekstu na pasku narzędzi i na karcie">
+<!ENTITY Ctr_chevronfix		"Pasek nawigacji: ukryj podwójną strzałkę ('szewron') na końcu paska">
+<!ENTITY Ctr_tbsep_winc		"Górne paski: dodatkowe separatory paska narzędzi">
 
-<!ENTITY Ctr_closeabarbut	"Pasek dodatków: Usuń przycisk zamknięcia">
+<!ENTITY Ctr_closeabarbut	"Pasek dodatków: usuń przycisk zamknięcia">
 <!ENTITY Ctr_highaddonsbar	"Zwiększ wysokość">
 <!ENTITY Ctr_addonbarfs		"W trybie pełnoekranowym">
 
@@ -311,10 +312,10 @@
 <!ENTITY Ctr_fx34loop		"Odznaczenie tego ustawienia usuwa funkcje 'dzwonienia i konwersacji'.">
 <!ENTITY Ctr_fx35devtheme	"Odznaczenie tych ustawień wyłącza 'Motyw Edycji Deweloperskiej'.">
 <!ENTITY Ctr_fx36prefs		"Odznaczenie tego ustawienia przywraca stare okno opcji.">
-<!ENTITY Ctr_fx36prefs2		"Uwaga: Stare okno opcji nie zawiera wszystkich ostatnio dodanych ustawień przeglądarki!">
+<!ENTITY Ctr_fx36prefs2		"Uwaga: stare okno opcji nie zawiera wszystkich ostatnio dodanych ustawień przeglądarki!">
 <!ENTITY Ctr_fx38reader		"Odznaczenie tych ustawienia wyłącza funkcję 'Popraw czytelność' oraz usuwa jej ikonę z paska adresu.">
 <!ENTITY Ctr_fx38pocket		"Odznaczenie tego ustawienia wyłącza funkcję 'Pocket' oraz usuwa jej ikonę z pasków narzędzi.">
-<!ENTITY Ctr_fx38pocket2	"Uwaga: Przesunięcie przycisku 'Pocket' do 'palety dostosowywania' przed zablokowaniem tego ustawienia usunie także elementy 'Pocket' w zakładkach i menu poprawy czytelności.">
+<!ENTITY Ctr_fx38pocket2	"Uwaga: przesunięcie przycisku 'Pocket' do 'palety dostosowywania' przed zablokowaniem tego ustawienia usunie także elementy 'Pocket' w zakładkach i menu poprawy czytelności.">
 <!ENTITY Ctr_e_searchui		"Wygląd wyszukiwania">
 <!ENTITY Ctr_e_loop			"Dzwonienie i konwersacja / Loop">
 <!ENTITY Ctr_e_deved		"Motyw Edycji Deweloperskiej">
