--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -266,6 +266,7 @@
 
 <!ENTITY Ctr_aerocolors		"Modre barve Aero za orodne vrstice (in zavihke)">
 <!ENTITY Ctr_transpttbw10	"Orodna vrstica z nazivom/menijem/zavihki: odstrani barvo ozadja">
+<!ENTITY Ctr_transpttbew10	"Additional tweaks for some OS themes">
 <!ENTITY Ctr_transptcw10	"Skrij privzete gumbe OS-a skrči/razpni/zapri">
 <!ENTITY Ctr_hidenavbar		"Orodna vrstica za krmarjenje: skrij orodno vrstico">
 <!ENTITY Ctr_navbarpad		"Dodatno levo in desno blazinjenje">
