--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -55,7 +55,7 @@
 <!ENTITY Ctr_tabwidthinfo2	"Maksimalna a minimalna šyrokosć wótwisujotej wót TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"Gódnoty pód 48px zawinuju zwětšego zmólki w pśedstajenju!">
 <!ENTITY Ctr_square_edges	"Kwadratiske górne rožki">
-<!ENTITY Ctr_tttitlebar		"Tab title in &brandShortName; titlebar">
+<!ENTITY Ctr_tttitlebar		"Rejtarkowy titel w titelowej rědce &brandShortName;">
 <!ENTITY Ctr_tabinsertion	"Pśiswójźbny rejtark za aktualnym rejtarkom zasunuś (about:config)">
 <!ENTITY Ctr_emptyfavicon	"Prozny faworitowy symbol wótnowiś (jolic sedło njepóbitujo žeden)">
 <!ENTITY Ctr_noemptypticon	"Prozny faworitowy symbol z pśipětego rejtarka">
@@ -66,7 +66,7 @@
 <!ENTITY Ctr_closetab_3		"Na kóńcu rejtarkoweje rědki">
 <!ENTITY Ctr_closetab_4		"Na zachopjeńku rejtarkoweje rědki">
 <!ENTITY Ctr_closetab_5		"Na wšych rejtarkach (wunuźony)">
-<!ENTITY Ctr_closetab_hfot	"Za jaden widobny rejtar schowaś">
+<!ENTITY Ctr_closetab_hfot	"Za jaden widobny rejtark schowaś">
 <!ENTITY Ctr_closei_def		"Standardne symbole">
 <!ENTITY Ctr_closeonleft	"Alternatiwna pozicija na rejtarku">
 <!ENTITY Ctr_close_wwltab	"Wokno ze slědnym widobnym rejtarkom zacyniś (about:config)">
@@ -115,17 +115,17 @@
 <!ENTITY Ctr_bf_space		"Rum mjazy tłocaškami reducěrowaś (jolic móžno)">
 <!ENTITY Ctr_noconicons		"Symbole kontekstowego menija boka pśez pomjenjenja wuměniś (slědk, dalej, stoj, znowego, bok ako cytańske znamje składowaś)">
 <!ENTITY Ctr_prefpage		"Bok nastajenjow">
-<!ENTITY Ctr_altoptionsd	"Default appearance">
+<!ENTITY Ctr_altoptionsd	"Standardny wenkowny naglěd">
 <!ENTITY Ctr_altoptionsp	"Alternatiwny wenkowny naglěd">
 <!ENTITY Ctr_altoptionsw	"Bok nastajenjow we woknje wócyniś">
-<!ENTITY Ctr_altoptionsww	"Width">
-<!ENTITY Ctr_altoptionswh	"Height">
-<!ENTITY Ctr_altoptionsi	"The simulated options window is not a dialog anymore but a 'browser window' with all toolbars hidden. The 'Use Current Page' feature only adds urls of pages opened in the current window, which is only 'about:preferences' in this case. The 'options' toolbar button gets replaced by a new one to be able to open options in a window.">
-<!ENTITY Ctr_options_rem	"Remember last selected category">
+<!ENTITY Ctr_altoptionsww	"Šyrokosć">
+<!ENTITY Ctr_altoptionswh	"Wusokosć">
+<!ENTITY Ctr_altoptionsi	"Simulěrowane wokno nastajenjow wěcej njejo dialog, ale 'wobglědowakowe wokno', źož wšykne symbolowe rědki su schowane. Funkcija 'Aktualny bok wužywaś' pśidawa jano URL bokow, kótarež wócynjaju se w aktualnem woknje, kótarež jo w toś tom paźe 'about:preferences'. Tłocašk symboloweje rědki 'Nastajenja' wuměnja se pśez nowy, aby se nastajenja we woknje wócynili.">
+<!ENTITY Ctr_options_rem	"Kategoriju se spomnjeś, kótaraž jo se ako slědna wubrała">
 <!ENTITY Ctr_svgfilters		"SVG-barwy za symbole tłocaškow symbolowych rědkow">
 <!ENTITY Ctr_wincontrols	"Pśesuwajobne wóźeńske elementy połneje wobrazowki">
-<!ENTITY Ctr_oldtoplevimg	"'Top level domain' images: classic appearance">
-<!ENTITY Ctr_altalertbox	"'Alert box': alternative appearance">
+<!ENTITY Ctr_oldtoplevimg	"Wobraze 'nejwušeje domeny': klasiski wenkowny naglěd">
+<!ENTITY Ctr_altalertbox	"'Warnowański kašćik': alternatiwny wenkowny naglěd">
 <!ENTITY Ctr_emptyfavicon2	"Prozny a dypkaty faworitowy symbol pśez łopjenowy symbol wuměniś">
 <!ENTITY Ctr_mstatusbar		"Pśesuwajobny wobcerk statusoweje rědki">
 <!ENTITY Ctr_mstatusbars4e	"Wobcerk statusoweje rědki kontrolěrujo se pśez 'Status-4-Evar'">
@@ -154,7 +154,7 @@
 <!ENTITY Ctr_cpanelmenus	"Menijowe wuskokujuce wokna (cytańske znamjenja, historija atd.): kompaktny naglěd">
 <!ENTITY Ctr_hidezoomres	"Skalěrowańske elementy na symbolowej rědce: Tłocašk za slědkstajenje skalěrowanja schowaś">
 <!ENTITY Ctr_alt_newtabp	"Bok nowego rejtarka (about:newtab): alternatiwne wuglědanje">
-<!ENTITY Ctr_ctroldsearch	"Old search (experimental)">
+<!ENTITY Ctr_ctroldsearch	"Stare pytanje (eksperimentelne)">
 <!ENTITY Ctr_addonmanager	"Zastojnik dodankow">
 <!ENTITY Ctr_alt_addonsp	"'Bok Dalšne info': alternatiwny pórěd">
 <!ENTITY Ctr_alt_addonsm	"Alternatiwny naglěd">
@@ -209,26 +209,26 @@
 
 <!ENTITY Ctr_urlbar			"Adresowe pólo">
 <!ENTITY Ctr_starinurl		"Gwězdowy tłocašk">
-<!ENTITY Ctr_starinurlinfo	"Default bookmarks menu button gets hidden">
+<!ENTITY Ctr_starinurlinfo	"Standardny tłocašk menija Cytańske znamjenja se schowajo">
 <!ENTITY Ctr_feedinurl		"Kanalowy tłocašk">
 <!ENTITY Ctr_hideurelstop	"Tłocaška Stoj a Znowego adresowych rědkow schowaś">
 <!ENTITY Ctr_hideurlgo		"Tłocašk 'Start' schowaś">
 <!ENTITY Ctr_hideurlsrg		"Źěleńske smužki a prozne znamjenja za tłocaški 'Znowego, stoj a Start' schowaś">
 <!ENTITY Ctr_urlbardropm	"Tłocašk na kóńc adresowego póla pśesunuś">
-<!ENTITY Ctr_altreaderico	"Alternative 'Reader' icons">
+<!ENTITY Ctr_altreaderico	"Alternatiwne 'cytakowe' symbole">
 <!ENTITY Ctr_hideprbutton	"Zdźěleński symbol schowaś, gaž wuskokujuce wokno se blokěrujo">
-<!ENTITY Ctr_locsearchbw10	"Reduce location bars and search bars height (experimental)">
+<!ENTITY Ctr_locsearchbw10	"Wusokosć adresowych a pytańskich pólow reducěrowaś (eksperimentelne)">
 <!ENTITY Ctr_urlbar_ib		"Tłocašk sedłoweje identity">
-<!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
-<!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
-<!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
+<!ENTITY Ctr_ib_nohovcolor	"Šeru barwu pód kursorom myški njepokazaś">
+<!ENTITY Ctr_ib_graycolor	"Šera barwa za njeznate identitowe boki a boki chrome">
+<!ENTITY Ctr_verifiedcolors	"Tłocaškowe barwy za pśeglědane websedła, wěste a njewěste zwiski">
 <!ENTITY Ctr_faviconurl		"Faworitowy symbol">
 <!ENTITY Ctr_padlock		"Pytkowy symbol za wěste zwiski">
 <!ENTITY Ctr_padlock_hid	"schowany">
 <!ENTITY Ctr_padlock_def	"standard">
 <!ENTITY Ctr_padlock_cla	"klasiski">
 <!ENTITY Ctr_padlock_mod	"moderny">
-<!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
+<!ENTITY Ctr_padlock_ext	"Symbol '&brandShortName;' za płaśiwe boki 'about'">
 <!ENTITY Ctr_icopageinfo	"Kliknjenje na symbol wócynja wokno 'Info wó boku">
 
 <!ENTITY Ctr_menubar_items	"Pozicija menijowych zapiskow">
@@ -266,7 +266,7 @@
 
 <!ENTITY Ctr_aerocolors		"Barwy 'Blue Aero' za głowne rědki a rejtarki">
 <!ENTITY Ctr_transpttbw10	"Titelowa/menijowa/rejtarkowa rědka: Slězynowu barwu wótpóraś">
-<!ENTITY Ctr_transpttbew10	"Additional tweaks for some OS themes">
+<!ENTITY Ctr_transpttbew10	"Pśidatne pólěpšenja za někotare drastwy źěłowego systema">
 <!ENTITY Ctr_transptcw10	"Standardne tłocaški Miniměrowaś/Maksiměrowaś/Zacyniś schowaś">
 <!ENTITY Ctr_hidenavbar		"Symbolowu rědku schowaś">
 <!ENTITY Ctr_navbarpad		"Pśidatny lěwa a pšawy nutśkowny wótstawk">
