--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -55,8 +55,8 @@
 <!ENTITY Ctr_tabwidthinfo2	"Minimalna a maksimalna šěrokosć rajtarkow so přez TabUtilities kontrolujetej">
 <!ENTITY Ctr_tabwidthinfo3	"Hódnoty pod 48px w najwjace padach zwobraznjenske zmylki zawinuja!">
 <!ENTITY Ctr_square_edges	"Kwadratiske hornje róžki">
-<!ENTITY Ctr_tttitlebar		"Tab title in &brandShortName; titlebar">
-<!ENTITY Ctr_tabinsertion	"Přiwuzny rajtark za aktualnym rajtarkom zasunuś (about:config)">
+<!ENTITY Ctr_tttitlebar		"Rajtarkowy titul w titulne lajsće &brandShortName;">
+<!ENTITY Ctr_tabinsertion	"Přiwuzny rajtark za aktualnym rajtarkom zasadźić (about:config)">
 <!ENTITY Ctr_emptyfavicon	"Prózdny faworitowy symbol wobnowić (jeli sydło žadyn njeposkića)">
 <!ENTITY Ctr_noemptypticon	"Prózdny faworitowy symbol z připinjeneho rajtarka wotstronić">
 <!ENTITY Ctr_e10stab_notd	"E10s-rajtarki: podsmužku wotstronić">
@@ -115,17 +115,17 @@
 <!ENTITY Ctr_bf_space		"Rum mjez tłóčatkami redukować (jeli móžno)">
 <!ENTITY Ctr_noconicons		"Symbole kontekstoweho menija strony přez pomjenowanja wuměnić (wróćo, dale, stój, znowa, stronu jako zapołožku składować)">
 <!ENTITY Ctr_prefpage		"Strona nastajenjow">
-<!ENTITY Ctr_altoptionsd	"Default appearance">
+<!ENTITY Ctr_altoptionsd	"Standardny zwonkowny napohlad">
 <!ENTITY Ctr_altoptionsp	"Alternatiwny zwonkowny napohlad">
 <!ENTITY Ctr_altoptionsw	"Strona nastajenjow we woknje wočinić">
-<!ENTITY Ctr_altoptionsww	"Width">
-<!ENTITY Ctr_altoptionswh	"Height">
-<!ENTITY Ctr_altoptionsi	"The simulated options window is not a dialog anymore but a 'browser window' with all toolbars hidden. The 'Use Current Page' feature only adds urls of pages opened in the current window, which is only 'about:preferences' in this case. The 'options' toolbar button gets replaced by a new one to be able to open options in a window.">
-<!ENTITY Ctr_options_rem	"Remember last selected category">
+<!ENTITY Ctr_altoptionsww	"Šěrokosć">
+<!ENTITY Ctr_altoptionswh	"Wysokosć">
+<!ENTITY Ctr_altoptionsi	"Simulowane wokno nastajenjow dialog hižo njeje, ale 'wobhladowakowe wokno', hdźež wšě symbolowe lajsty su schowane. Funkcija 'Aktualnu stronu wužiwać' přidawa jenož URL stronow, kotrež so w aktualnym woknje wočinjeja, kotrež je w tutym padźe jenož 'about:preferences'. Tłóčatko symboloweje lajsty 'Nastajenja' so přez nowe wuměnja, zo bychu so nastajenja we woknje wočinili.">
+<!ENTITY Ctr_options_rem	"Kategoriju sej spomjatkować, kotraž je so jako poslednja wubrała">
 <!ENTITY Ctr_svgfilters		"SVG-barby za symbole standardnych tłóčatkow">
 <!ENTITY Ctr_wincontrols	"Přesuwajomne wodźenske elementy połneje wobrazowki">
-<!ENTITY Ctr_oldtoplevimg	"'Top level domain' images: classic appearance">
-<!ENTITY Ctr_altalertbox	"'Alert box': alternative appearance">
+<!ENTITY Ctr_oldtoplevimg	"Wobrazy 'najwyšeje domeny': klasiski zwonkowny napohlad">
+<!ENTITY Ctr_altalertbox	"'Warnowanski kašćik': alternatiwny zwonkowny napohlad">
 <!ENTITY Ctr_emptyfavicon2	"Prózdny a dypkowany faworitowy symbol přez łopjenowy symbol wuměnić">
 <!ENTITY Ctr_mstatusbar		"Přesuwajomny wobłuk statusoweje lajsty">
 <!ENTITY Ctr_mstatusbars4e	"Statusowy wobłuk seo přez 'Status-4-Evar' kontroluje">
@@ -209,26 +209,26 @@
 
 <!ENTITY Ctr_urlbar			"Adresowe polo">
 <!ENTITY Ctr_starinurl		"Hwězdne tłóčatko">
-<!ENTITY Ctr_starinurlinfo	"Default bookmarks menu button gets hidden">
+<!ENTITY Ctr_starinurlinfo	"Standardne tłóčatko menija Zapołožki so schowa">
 <!ENTITY Ctr_feedinurl		"Kanalowe tłóčatko RSS">
 <!ENTITY Ctr_hideurelstop	"Tłóčatce Stój a Znowa adresowych lajstow schować">
 <!ENTITY Ctr_hideurlgo		"Tłóčatko 'Start' schować">
 <!ENTITY Ctr_hideurlsrg		"Dźělatka a mjezery za tłošatka 'Znowa, Stój a Start' schować">
 <!ENTITY Ctr_urlbardropm	"Tłóčatko na kónc adresoweho pola přesunyć">
-<!ENTITY Ctr_altreaderico	"Alternative 'Reader' icons">
+<!ENTITY Ctr_altreaderico	"Alternatine 'čitakowe' symbolei">
 <!ENTITY Ctr_hideprbutton	"Zdźělenski symbol schować, hdyž so wuskakowace wokno blokuje">
-<!ENTITY Ctr_locsearchbw10	"Reduce location bars and search bars height (experimental)">
+<!ENTITY Ctr_locsearchbw10	"Wysokosć adresowych a pytanskich polow redukować (eksperimentelne)">
 <!ENTITY Ctr_urlbar_ib		"Tłóčatko sydłoweje identity">
-<!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
-<!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
-<!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
+<!ENTITY Ctr_ib_nohovcolor	"Pod kursorom myški šěru barbu njepokazać">
+<!ENTITY Ctr_ib_graycolor	"Šěra barba za njeznate identitowe strony a strony 'chrome'">
+<!ENTITY Ctr_verifiedcolors	"Tłóčatkowe barby za přepruwowane websydła, wěste a njewěste zwiski">
 <!ENTITY Ctr_faviconurl		"Faworitowy symbol">
 <!ENTITY Ctr_padlock		"Zamkowy symbol za wěste zwiski">
 <!ENTITY Ctr_padlock_hid	"schowany">
 <!ENTITY Ctr_padlock_def	"standard">
 <!ENTITY Ctr_padlock_cla	"klasiski">
 <!ENTITY Ctr_padlock_mod	"moderny">
-<!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
+<!ENTITY Ctr_padlock_ext	"Symbol '&brandShortName;' za płaćiwe strony 'about'">
 <!ENTITY Ctr_icopageinfo	"Kliknjenje na symbol wočinja wokno 'Info wo stronje'">
 
 <!ENTITY Ctr_menubar_items	"Pozicija menijowych zapiskow">
@@ -266,7 +266,7 @@
 
 <!ENTITY Ctr_aerocolors		"Barby 'Blue Aero' za hłowne lajsty a rajtarki">
 <!ENTITY Ctr_transpttbw10	"Titulna/menijowa/rajtarkowa lajsta: Pozadkowu barbu wotstronić">
-<!ENTITY Ctr_transpttbew10	"Additional tweaks for some OS themes">
+<!ENTITY Ctr_transpttbew10	"Přidatne polěpšenja za někotre drasty dźěłoweho systema">
 <!ENTITY Ctr_transptcw10	"Standardne tłóčatka Miniměrować/Maksiměrować/Začinić schować">
 <!ENTITY Ctr_hidenavbar		"Symbolowu lajstu schować">
 <!ENTITY Ctr_navbarpad		"Přidatny lěwy a prawy nutřkowny wotstawk">
