--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -115,7 +115,7 @@
 <!ENTITY Ctr_bf_space		"Zmanjšaj prostor med gumbi (če je možno)">
 <!ENTITY Ctr_noconicons		"Vsebinski meni strani: nadomesti ikone z oznakami (Nazaj, Naprej ...)">
 <!ENTITY Ctr_prefpage		"Stran z možnostmi">
-<!ENTITY Ctr_altoptionsd	"Default appearance">
+<!ENTITY Ctr_altoptionsd	"Privzeti videz">
 <!ENTITY Ctr_altoptionsp	"Nadomestni videz">
 <!ENTITY Ctr_altoptionsw	"Odpri stran z možnostmi v oknu">
 <!ENTITY Ctr_altoptionsww	"Širina">
@@ -217,10 +217,10 @@
 <!ENTITY Ctr_urlbardropm	"Premakni spustno puščico na konec naslovne vrstice">
 <!ENTITY Ctr_altreaderico	"Nadomestne ikone 'Bralnika'">
 <!ENTITY Ctr_hideprbutton	"Skrij ikono obvestil ob blokiranju pojavnega okna">
-<!ENTITY Ctr_locsearchbw10	"Reduce location bars and search bars height (experimental)">
-<!ENTITY Ctr_urlbar_ib		"Gumb identitete strani (polje indentitete)">
+<!ENTITY Ctr_locsearchbw10	"Zmanjšaj višino naslovne in iskalnne vrstice (preskusno)">
+<!ENTITY Ctr_urlbar_ib		"Gumb identitete strani (polje identitete)">
 <!ENTITY Ctr_ib_nohovcolor	"Ob prehodu ne prikaži sive barve">
-<!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
+<!ENTITY Ctr_ib_graycolor	"Siva barva za neznano identiteto in strani chrome">
 <!ENTITY Ctr_verifiedcolors	"Barve gumbov za preverjene strani, varne in nezanesljive povezave">
 <!ENTITY Ctr_faviconurl		"Zaznamka: ikona trenutne spletne strani">
 <!ENTITY Ctr_padlock		"Ikona ključavnice za varne povezave">
@@ -228,7 +228,7 @@
 <!ENTITY Ctr_padlock_def	"privzeta">
 <!ENTITY Ctr_padlock_cla	"klasična">
 <!ENTITY Ctr_padlock_mod	"sodobna">
-<!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
+<!ENTITY Ctr_padlock_ext	"Ikona '&brandShortName;' za veljavne strani 'about'">
 <!ENTITY Ctr_icopageinfo	"Klik na ikono odpre okno 'Podatkov o strani'">
 
 <!ENTITY Ctr_menubar_items	"Položaj predmetov menija">
@@ -266,7 +266,7 @@
 
 <!ENTITY Ctr_aerocolors		"Modre barve Aero za orodne vrstice (in zavihke)">
 <!ENTITY Ctr_transpttbw10	"Orodna vrstica z nazivom/menijem/zavihki: odstrani barvo ozadja">
-<!ENTITY Ctr_transpttbew10	"Additional tweaks for some OS themes">
+<!ENTITY Ctr_transpttbew10	"Dodatne prilagoditve za nekatere teme OS-a">
 <!ENTITY Ctr_transptcw10	"Skrij privzete gumbe OS-a skrči/razpni/zapri">
 <!ENTITY Ctr_hidenavbar		"Orodna vrstica za krmarjenje: skrij orodno vrstico">
 <!ENTITY Ctr_navbarpad		"Dodatno levo in desno blazinjenje">
